--- a/new_look/Video Background Version/HTML Files/index-es.html
+++ b/new_look/Video Background Version/HTML Files/index-es.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
 <link rel="canonical" href="http://mikerai.com" />
-<meta name="robots" content="noindex">
-<title>Miguel Angel Rodriguez Alvarez Icaza - UX Manager</title>
+<meta name="robots" content="index follow">
+<title>Miguel &Aacute;ngel Rodr&iacute;guez &Aacute;lvarez Icaza - UX Manager</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="description" content="Hola! Bienvenido a mi sitio personal. Soy Gerente de Experiencia del Usuario (UX). Ponte en contacto conmigo para hablar de tus proyectos.">
@@ -81,7 +81,7 @@
     <!-- Start of Main Title + Intro -->
     <div class="huge-title">
         <img src="img/headshot.jpg" alt="Fotograf&iacute;a de Miguel Angel Rodriguez Alvarez Icaza" class="headshot wow tada" data-wow-delay="3s" data-wow-offset="80" data-wow-duration="1s">
-        <h1 class="wow bounceInDown" data-wow-offset="80" data-wow-duration="3s">Miguel Angel Rodr&iacute;guez Alvarez Icaza</h1>
+        <h1 class="wow bounceInDown" data-wow-offset="80" data-wow-duration="3s">Miguel &Aacute;ngel Rodr&iacute;guez &Aacute;lvarez Icaza</h1>
 
         <!-- Start of Owl Testimonial Carousel -->
         <div class="testimonials owl-carousel">
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="one_third_last wow fadeInUp" data-wow-offset="120" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <h4>EDUCACION</h4>
+                        <h4>EDUCACI&Oacute;N</h4>
                             <h5>IME y MAE</h5>
                 </div>
                 
@@ -341,7 +341,7 @@
                           <div><blockquote><p>Enfocado en las necesidades del cliente y del usuario final.</p></blockquote></div>
                           <div><blockquote><p>Desarrollar y entregar productos altamente eficientes.</p></blockquote></div>
                           <div><blockquote><p>Proveer la mejor usabilidad posible.</p></blockquote></div>
-                          <div><blockquote><p>Dejar de pensar s&oacute;lo en Sitios.</p><p>Empezar a pensar en Sistemas.</p></blockquote></div>
+                          <div><blockquote><p>Dejar de pensar solo en Sitios.</p><p>Empezar a pensar en Sistemas.</p></blockquote></div>
                           <div><blockquote><p>Mejorar la Experiencia del Usuario mediante el refinamiento de los procesos de Dise&ntilde;o &amp; Desarrollo.</p></blockquote></div>
                     </div>
                     <!-- End of Carousel -->
@@ -482,8 +482,8 @@
                     </p>
 
                     <p class="noCaptcha">
-                        <label for="captcha">Are you human?</label>
-                        <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT" data-callback="onValidate"></div>
+                        <label for="captcha">¿Eres humano?</label>
+                        <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT" data-callback="onValidate" data-theme="dark"></div>
                     </p>
                     <script>
                         onValidate = function (){
@@ -511,7 +511,7 @@
             <!-- Start of Content -->
             <div class="content">
 
-                <p>Miguel Angel Rodr&iacute;guez Alvarez Icaza<br>
+                <p>Miguel &Aacute;ngel Rodr&iacute;guez &Aacute;lvarez Icaza<br>
                 Quer&eacute;taro, Mexico</p>
                 <p><a href="skype:miguel-angel-rodriguez">B&uacute;scame en Skype</a></p>
                 <p class="copyright">Copyright &copy; 2014 - mikerai</p>
@@ -535,7 +535,7 @@ if (!window.jQuery) {
 </script>    
 <!-- Now we load the JS file for the fancy things on the page -->
 <script type="text/javascript" src="js/scripts.min.js"></script>
-<script type='text/javascript' src="https://www.google.com/recaptcha/api.js"></script>
+<script type='text/javascript' src="https://www.google.com/recaptcha/api.js?hl=es"></script>
 <!--<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
