Mix it up added and new folder for logos

--- a/bp-black/index.html
+++ b/bp-black/index.html
@@ -171,7 +171,19 @@
                     <section>
                         <form class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
                           <h3>Please send me a message.</h3>
-                          <fieldset>
+                            <p class="noCaptcha">
+                                <label for="captcha">Are you human?</label>
+                                <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT" data-callback="onValidate" data-theme="dark"></div>
+                            </p>
+                            <script>
+                                onValidate = function ()
+                                {
+                                    $("fieldset.contactForm").slideToggle(150);
+                                    $("p.noCaptcha").fadeOut(1500);
+                                    $("div.g-recaptcha").fadeOut(1500);
+                                };
+                            </script>
+                          <fieldset class="contactForm">
                             <legend>Please provide your name, email address and a message.</legend>
                             <p>
                               <label for="cname">Name</label>
@@ -188,16 +200,12 @@
                             <p>
                               <button class="submit" type="submit" value="Submit">Submit</button>
                             </p>
-                            <p>
-                                <label for="captcha">Human?</label>
-                                <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT"></div>
-                            </p>
                           </fieldset>
                         </form>
                     </section>
                 </div>
                 <div class="col-xs-12 col-s-6 center">
-                    <button class="tweets mb16">My Tweets</button>
+                    <button class="tweets mb16">Hide my tweets</button>
                         <div id="tweets">
                             <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
                                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -245,5 +253,6 @@
     <script type='text/javascript' src="blur.js"></script>
     <script type='text/javascript' src="scripts.js"></script>
     <script type='text/javascript' src="validate.js"></script>
+    <script type='text/javascript' src="https://www.google.com/recaptcha/api.js"></script>
 </body>
 </html>
