--- a/bp/index.html
+++ b/bp/index.html
@@ -94,7 +94,7 @@
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
                 <div class="row clients" tabindex="0">
-                    <div class="row">    
+                    <!-- <div class="row">    
                         <div class="col-s-3 col-xs-3">
                             <div class="">
                                 <img src="img/brusmall.png" alt="Babies R Us logo" title="Babies R Us logo">
@@ -115,7 +115,7 @@
                                 <img src="img/huaweismall.png" alt="Huawei logo" title="Huawei logo">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row">
                         <div class="controls">
                           <label>Filter:</label>
