--- a/bp-black/index.html
+++ b/bp-black/index.html
@@ -207,8 +207,10 @@
                 <div class="col-xs-12 col-s-6 center">
                     <button class="tweets mb16">Hide my tweets</button>
                         <div id="tweets">
-                            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX</a>
-                                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                            <a class="twitter-timeline" href="https://twitter.com/mikerai_UX" data-widget-id="544989880011333632">Tweets by @mikerai_UX</a>
+                                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+                                </script>
+
                         </div>
                 </div>
         </div>
