--- a/bp-black/index.html
+++ b/bp-black/index.html
@@ -25,7 +25,7 @@
 
     <div class="row">
       <div class="fixed center visible-xs">
-        <button class="menuB">Menu</button>
+        <button class="menuB">☰</button>
           <nav>
             <ul>
               <li><a href="#me">Me</a></li>
