Changes and experiments

--- a/demo-one-page/index.html
+++ b/demo-one-page/index.html
@@ -18,12 +18,12 @@
     <div class="menu fixed center">
       <input class="menuB hide-for-medium-up" type="image" src="img/menuB.png"></input>
       <nav class="row">
-        <div class="large-2 medium-2 columns center ptb8"><a href="#home" class="menu">Home</a></div>
-        <div class="large-2 medium-2 columns center ptb8"><a href="#first" class="menu">First Section</a></div>
-        <div class="large-2 medium-2 columns center ptb8"><a href="#second" class="menu">Second Section</a></div>
-        <div class="large-2 medium-2 columns center ptb8"><a href="#third" class="menu">Third Section</a></div>
-        <div class="large-2 medium-2 columns center ptb8"><a href="#fourth" class="menu">Fourth Section</a></div>
-        <div class="large-2 medium-2 columns center ptb8"><a href="#fifth" class="menu">Fifth Section</a></div>
+        <div class="large-2 medium-2 columns center prl16"><a href="#home" class="menu">Home</a></div>
+        <div class="large-2 medium-2 columns center prl16"><a href="#first" class="menu">First Section</a></div>
+        <div class="large-2 medium-2 columns center prl16"><a href="#second" class="menu">Second Section</a></div>
+        <div class="large-2 medium-2 columns center prl16"><a href="#third" class="menu">Third Section</a></div>
+        <div class="large-2 medium-2 columns center prl16"><a href="#fourth" class="menu">Fourth Section</a></div>
+        <div class="large-2 medium-2 columns center prl16"><a href="#fifth" class="menu">Fifth Section</a></div>
       </nav>
     </div>
     <section id="first" class="row">
@@ -72,7 +72,11 @@
       <div>Dicta vitae quia deleniti ipsam, quas natus exercitationem error corporis atque nesciunt consectetur, sit beatae voluptas repellat ex animi sequi perspiciatis recusandae, minima accusantium est, accusamus aperiam? Rem, quisquam, ad.</div>
       <div>Sint molestias deleniti quidem accusantium, necessitatibus ratione dignissimos possimus impedit aliquid expedita placeat magnam voluptas, repellendus iure quo illum autem, ut minus qui omnis, nemo facilis. Laborum odio beatae pariatur.</div>
     </section>
-    <footer></footer>
+    <footer class="row">
+      <div class="10-large large-centered columns center">
+        <p>Copyright &copy;2015. Mikerai.com</p>
+      </div>
+    </footer>
     <script type='text/javascript' src="js/vendor/jquery.js"></script>
     <script type='text/javascript' src="js/foundation.min.js"></script>
     <script type='text/javascript' src="js/scripts.js"></script>
