--- a/bp/index.html
+++ b/bp/index.html
@@ -227,7 +227,7 @@
                     </section>
                 </div>
                 <div class="col-xs-12 col-s-6 center">
-                    <button class="tweets mb16" tabindex="0">Hide my tweets</button>
+                    <button class="tweets" tabindex="0">Hide my tweets</button>
                         <div id="tweets">
                             <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/mikerai_UX" data-widget-id="534906066828419073">Tweets by @mikerai_UX
                             </a>
