Font face added and ttf fonts added too

--- a/sara/index.html
+++ b/sara/index.html
@@ -38,7 +38,7 @@
 
       <section id="edu" class="medium-9 small-12 columns">
         <h2 class="title">Educaci&oacute;n</h2>
-        <div class="row content">
+        <div class="row collapse content">
           <div class="medium-10 medium-offset-2 small-12 columns">
             <div class="row collapse">
               <div class="medium-5 small-12 columns">
@@ -86,7 +86,6 @@
 
       <section id="contact" class="medium-9 small-12 columns">
         <h2 class="title">Contacto</h2>
-        <div class="row">
           <div class="medium-9 small-12 columns">
             <form data-abide class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
               <div class="name-field">
@@ -122,7 +121,6 @@
               <button class="success submit" type="submit">Enviar</button>
             </form>
           </div>
-        </div>
       </section>
 
       <footer class="medium-9 small-12 columns columns">
