--- a/sara/index.html
+++ b/sara/index.html
@@ -89,19 +89,19 @@
           <div class="medium-9 small-12 columns">
             <form data-abide class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
               <div class="name-field">
-                <label>Tu nombre <small>*requerido</small>
+                <label>Tu nombre
                   <input type="text" name="name" required pattern="[a-zA-Z]+">
                 </label>
                 <small class="error">Necesitamos tu nombre para saber qui&eacute;n eres</small>
               </div>
               <div class="email-field">
-                <label>Correo electr&oacute;nico <small>*requerido</small>
+                <label>Correo electr&oacute;nico
                   <input type="email" name="email" required>
                 </label>
                 <small class="error">Direcci&oacute;n de correo electr&oacute;nico no v&aacute;lida</small>
               </div>
               <div class="comment-field">
-                <label>Tus comentarios <small>*requerido</small>
+                <label>Tus comentarios
                   <textarea type="text" name="comment" required pattern="[a-zA-Z]+"></textarea>
                 </label>
                 <small class="error">D&eacute;janos un comentario.</small>
@@ -125,7 +125,7 @@
 
       <footer class="medium-9 small-12 columns columns">
         <div class="large-10-centered columns center">
-          <p>Copyright &copy;2015. <a href="#home">Mikerai.com</a></p>
+          <p>Copyright &copy;2015. <a href="#home">muino.net</a></p>
         </div>
       </footer>
 
