--- a/sara/index.html
+++ b/sara/index.html
@@ -39,9 +39,9 @@
       <section id="edu" class="medium-9 small-12 columns">
         <h2 class="title">Educaci&oacute;n</h2>
         <div class="row collapse content">
-          <div class="medium-10 medium-offset-2 small-12 columns">
+          <div class="large-10 large-offset-2 medium-12 small-12 columns">
             <div class="row collapse">
-              <div class="medium-5 small-12 columns">
+              <div class="medium-6 small-12 columns">
                 <h2>Maestr&iacute;a</h2>
               </div>
               <div class="medium-6 small-11 columns">
@@ -49,21 +49,15 @@
                 <p><b>ITESM</b> Campus Quer&eacute;taro</p>
                 <p>agosto 2010 - julio 2012</p>
               </div>
-              <div class="medium-1 small-1 columns center">
-                
-              </div>
             </div>
             <div class="row collapse last-title">
-              <div class="medium-5 small-12 columns">
+              <div class="medium-6 small-11 columns">
                 <h2>Licenciatura</h2>
               </div>
               <div class="medium-6 small-11 columns">
                 <p>Arquitectura</p>
                 <p><b>ITESM</b> Campus Quer&eacute;taro</p>
                 <p>agosto 1995 - mayo 2000</p>
-              </div>
-              <div class="medium-1 small-1 columns center">
-                
               </div>
             </div>
           </div>
